fixed spacing, added gradient

--- a/src/style.css
+++ b/src/style.css
@@ -18,32 +18,26 @@
   position: relative;
   display: flex;
   align-items: center;
-  border: 1px solid #e1e7ed;
-  border-radius: 4px;
-  box-sizing: border-box;
-  box-shadow: 0 1px 8px rgba(61, 78, 97, 0.1);
   margin-inline: 8px;
 }
 
 .search-bar:hover {
-  box-shadow: 0 4px 4px rgba(61, 78, 97, 0.25);
+  box-shadow: 0 3px 8px #3d4e6133;
 }
 
 .search-bar--big {
-  gap: 17px;
   margin-top: 20px;
   margin-bottom: 20px;
-}
-
-.search-bar--small {
-  gap: 9px;
 }
 
 .search-bar__input {
   font-family: Avenir, sans-serif;
   font-weight: 300;
   color: #3d4e61;
-  border-style: none;
+  border: 1px solid #e1e7ed;
+  border-radius: 4px;
+  box-sizing: border-box;
+  box-shadow: 0 1px 8px #3d4e611a;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -52,6 +46,7 @@
 .search-bar__input:focus {
   font-weight: 800;
   outline: none;
+  background: linear-gradient(#fff, #f6f6f7);
 }
 
 .search-bar__input::placeholder {
